; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/maps/extr_pci.c_mtd_pci_write8.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/maps/extr_pci.c_mtd_pci_write8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_info = type { i32 }
%struct.TYPE_3__ = type { i32* }
%struct.map_pci_info = type { i64 (%struct.map_pci_info*, i64)*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.map_info*, i32*, i64)* @mtd_pci_write8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtd_pci_write8(%struct.map_info* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__, align 8
  %5 = alloca %struct.map_info*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.map_pci_info*, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32* %1, i32** %8, align 8
  store %struct.map_info* %0, %struct.map_info** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load %struct.map_info*, %struct.map_info** %5, align 8
  %10 = bitcast %struct.map_info* %9 to %struct.map_pci_info*
  store %struct.map_pci_info* %10, %struct.map_pci_info** %7, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.map_pci_info*, %struct.map_pci_info** %7, align 8
  %16 = getelementptr inbounds %struct.map_pci_info, %struct.map_pci_info* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.map_pci_info*, %struct.map_pci_info** %7, align 8
  %19 = getelementptr inbounds %struct.map_pci_info, %struct.map_pci_info* %18, i32 0, i32 0
  %20 = load i64 (%struct.map_pci_info*, i64)*, i64 (%struct.map_pci_info*, i64)** %19, align 8
  %21 = load %struct.map_pci_info*, %struct.map_pci_info** %7, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i64 %20(%struct.map_pci_info* %21, i64 %22)
  %24 = add nsw i64 %17, %23
  %25 = call i32 @writeb(i32 %14, i64 %24)
  ret void
}

declare dso_local i32 @writeb(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
